@startuml
title M4 出库订单状态流转

state "待校验" as pending_validation
state "校验异常" as validation_exception
state "已确认" as confirmed
state "已入波次" as in_wave
state "库存锁定" as inventory_locked
state "已复核" as reviewed
state "已发货" as shipped
state "已签收" as signed
state "已作废" as cancelled
state "已作废(回退)" as cancelled_rollback

[*] --> pending_validation : ERP 推送 / 手工创建\nM-CG 生成 WMS 单号\nM1 document_type
pending_validation --> validation_exception : WMS 校验不通过\n库存不足 / 规则异常
validation_exception --> pending_validation : 人工修改后重新校验
pending_validation --> confirmed : 校验通过
confirmed --> in_wave : 进入波次
confirmed --> cancelled : 作废申请\nH4 企微审批通过
in_wave --> inventory_locked : 波次下发 / 开始拣选\n锁定库存
in_wave --> cancelled_rollback : 未开始拣选时强制作废\nPDA 回退上架
inventory_locked --> reviewed : 拣选完成\n复核确认
reviewed --> shipped : 打印单据\n发货交接确认\n发货时扣减库存
shipped --> signed : 客户签收 / 轨迹回写

cancelled --> [*]
cancelled_rollback --> [*]
signed --> [*]

note right of pending_validation
出库订单的商品、批号、数量由 ERP 指定。
WMS 只校验合格库存并在波次阶段决定库位。
end note

note right of inventory_locked
拣选开始后不回退。
短拣可继续拣选 / 复核，
但发货前必须补齐，不允许部分发货。
end note

note bottom
所有写操作需要 Idempotency-Key、H1 权限和 H2 审计。
document_type 来源于 M1 系统字典，WMS 单号来源于 M-CG。
end note
@enduml
